--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -46,10 +46,10 @@
             <span>Aperture Science</span>
           </div>
             <nav class="nav3-links">
-              <a href="#" >Features</a>
-              <a href="#" >Products</a>
-              <a href="#" >Resources</a>
-              <a href="#" >Contact</a>
+              <a href="#" class="nav3-link" >Features</a>
+              <a href="#" class="nav3-link" >Products</a>
+              <a href="#" class="nav3-link" >Resources</a>
+              <a href="#" class="nav3-link" >Contact</a>
               <div class="2-button">
               <button class="Log-in">Login</button>
               <button class="get-started">Get started</button>
