might fix the not pathing to footer and header electic boogaloo

--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -14,7 +14,7 @@
         <h1 class="static header 1">Static Header 1</h1>
         
         <section class="header_header1">
-            <img src="/pages\header-gallery\assets\img\colossal_titan_by_thuddleston-d88rxls-3687139769.jpg" alt="titan" class="titan">
+            <img src="/pages/header-gallery/assets/img/colossal_titan_by_thuddleston-d88rxls-3687139769.jpg" alt="titan" class="titan">
             <nav class="nav-links">
               <a href="#" class="nav-link">Features</a>
               <a href="#" class="nav-link">Pricing</a>
@@ -59,7 +59,7 @@
           </section>
 
           <section class="header_header4">
-            <img src="/pages\header-gallery\assets\img\colossal_titan_by_thuddleston-d88rxls-3687139769.jpg" alt="titan" class="titan">
+            <img src="/pages/header-gallery/assets/img/colossal_titan_by_thuddleston-d88rxls-3687139769.jpg" alt="titan" class="titan">
             <nav class="nav4-links">
               <a href="#" class="nav-link">Features</a>
               <a href="#" class="nav-link">Pricing</a>
