third time the charm

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h2>Subtitle</h2>
         <p>Description of the website goes here. This is a placeholder for the main description text.</p>
         <nav>
-            <button onclick="location.href='/WD-SW3-TC04/pages/header-gallery'">Header Gallery</button>
-            <button onclick="location.href='/WD-SW3-TC04/pages/footer-gallery'">Footer Gallery</button>
+            <button onclick="location.href='./pages/header-gallery'">Header Gallery</button>
+            <button onclick="location.href='./pages/footer-gallery'">Footer Gallery</button>
         </nav>
     </header>
    
