--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -5,21 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer Gallery</title>
 
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="/pages/footer-gallery/assets/css/style.css">
 </head>
 <h1>FOOTERS</h1>
 <a href="../../index.html">Home</a>
 
 <body>
     <!-- Static Footers -->
-    <section class="footer-gallery">
-        <h2>Static Footers</h2>
-        
-        <!-- Static Footer 1 -->
-        <div class="footer footer1">
-            <p>Static Footer 1 content goes here.</p>
+    <div class="container1">
+        <div class="footer1">
+          <div class="footer1-links">
+            <a href="#">Legal Stuff</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Security</a>
+            <a href="#">Website Accessibility</a>
+            <a href="#">Manage Cookies</a>
+          </div>
+          <div class="social1-icons">
+            <a href="#" class="facebook"></a>
+            <a href="#" class="instagram"></a>
+            <a href="#" class="youtube"></a>
+            <a href="#" class="twitter"></a>
+            <a href="#" class="linkedin"></a>
+            <a href="#" class="tiktok"></a>
+          </div>
         </div>
-
+    </div>
         <!-- Static Footer 2 -->
         <div class="footer footer2">
             <p>Static Footer 2 content goes here.</p>
