--- a/pages/footer-gallery/index.html
+++ b/pages/footer-gallery/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Footer Gallery</title>
 
-    <link rel="stylesheet" href="/pages/footer-gallery/assets/css/style.css">
+    <link rel="stylesheet" href="./pages/footer-gallery/assets/css/style.css">
 </head>
 <h1>FOOTERS</h1>
 <a href="../../index.html">Home</a>
