--- a/pages/header-gallery/index.html
+++ b/pages/header-gallery/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Header Gallery</title>
-    <link rel="stylesheet" href="/WD-SW3-TC04/pages/header-gallery/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <section class="header-gallery">
